--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -13,7 +13,7 @@ p {
   align-items: center;
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../../../../image/pexels-cottonbro-3951355.jpg);
+    url(../../../assets/image/pexels-cottonbro-3951355.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
