--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,12 +1,23 @@
 <div class="sectionOne">
   <!-- nav -->
   <nav class="nav nav-pills nav-fill" style="background-color: floralwhite">
-    <a class="nav-link" aria-current="page" href="#"
-      ><strong> Active</strong></a
+    <a
+      class="nav-link"
+      aria-current="page"
+      target="_blank"
+      href="https://selfregistration.sandbox.cowin.gov.in/"
+      ><strong> Co-Win</strong></a
     >
-    <a class="nav-link" href="#"><strong> Much longer nav link</strong></a>
-    <a class="nav-link" href="#"><strong>Link</strong></a>
-    <a class="nav-link disabled"><strong> Disabled </strong></a>
+    <a
+      class="nav-link"
+      target="_blank"
+      href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public#:~:text=If%20COVID%2D19%20is,you%20live%20and%20work."
+      ><strong>WHO</strong></a
+    >
+    <a class="nav-link" target="_blank" href="https://www.aarogyasetu.gov.in/"
+      ><strong>Aarogya Setu</strong></a
+    >
+    <a class="nav-link disabled"><strong> About Us </strong></a>
   </nav>
   <!-- nav -->
   <h1><u> Check your Slots For Vaccination</u></h1>
